# cub_test

./: CMakeLists.txt  README.md  cub_test.cu
nbody/: 01-nbody-ori.cu  02-nbody-opt1.cu  03-nbody-opt2.cu  04-nbody-shuffle.cu  Makefile
